Stop wrap on TH

--- a/main.css
+++ b/main.css
@@ -16,6 +16,7 @@ tr:first-child {
 
 th {
     padding: .5em 1em;
+    white-space: nowrap;
 }
 
 th:nth-of-type(1) {
